[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/rooms/space/level.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/megaman_2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/gui/centre_text.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/gui/cursor.png" type="Texture" id=4]
[ext_resource path="res://src/gui/aimer.gd" type="Script" id=5]
[ext_resource path="res://src/characters/megaship/megaship.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/library/camera.gd" type="Script" id=8]
[ext_resource path="res://src/rooms/space/enemy_generator.gd" type="Script" id=9]
[ext_resource path="res://src/characters/enemies/asteroid.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/characters/enemies/telly.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/characters/enemies/fly_robot.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/characters/enemies/telly_spawner.tscn" type="PackedScene" id=13]
[ext_resource path="res://resources/gui/warning_masks.tres" type="SpriteFrames" id=14]
[ext_resource path="res://resources/gui/warning_palettes.tres" type="SpriteFrames" id=15]
[ext_resource path="res://src/rooms/space/space_background.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/library/music_looper.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/gui/tiled_progress.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/sprites/palettes/megaship/megaship_palette_0.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/characters/megaship/ship/megaship_mask_0.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

//The palette used
uniform sampler2D palette;
//how many horizontal pixels has the palette
uniform float palette_size;
//Mask for wich color use from palette
uniform sampler2D mask;

void fragment() {
	vec4 mask_color = texture(mask,UV);
	vec4 output = texture(TEXTURE,UV);
	if(mask_color.r != 1.0)
	{
		highp float color_r = mask_color.r;
		//If an inconsistency appears between Intel and Amd/Nvidia, feel free to fix it and commit, but take this as a warning for production use
		output = texture(palette,vec2((color_r*255.0+0.5)/255.0,0.0));
	}
	else{
		output.a = 0.0; // White turns into transparent.
	}
	COLOR.rgba = output;
}
"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/palette_size = 8.0
shader_param/palette = ExtResource( 20 )
shader_param/mask = ExtResource( 21 )

[node name="Space" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="GUILayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Container" type="Control" parent="GUILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarContainer" type="Control" parent="GUILayer/Container"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MegashipHPBar" parent="GUILayer/Container/BarContainer" instance=ExtResource( 19 )]
margin_left = 16.0
margin_top = 24.0
margin_right = 23.0
margin_bottom = 80.0
max_value = 28.0
cell_size = Vector2( 7, 2 )
horizontal = false
palette = 0

[node name="MegashipAmmoBar" parent="GUILayer/Container/BarContainer" instance=ExtResource( 19 )]
margin_left = 23.0
margin_top = 24.0
margin_right = 30.0
margin_bottom = 80.0
max_value = 28.0
cell_size = Vector2( 7, 2 )
horizontal = false
palette = 0

[node name="CenterContainer" type="CenterContainer" parent="GUILayer/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterText" type="Label" parent="GUILayer/Container/CenterContainer"]
margin_left = 240.0
margin_top = 131.0
margin_right = 240.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
script = ExtResource( 3 )

[node name="Aimer" type="TextureRect" parent="GUILayer/Container"]
margin_right = 5.0
margin_bottom = 5.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLayer" type="Node2D" parent="."]
pause_mode = 1

[node name="Megaship" parent="GameLayer" instance=ExtResource( 7 )]
_hp_bar_path = NodePath("../../GUILayer/Container/BarContainer/MegashipHPBar")
DAMAGE_MULTIPLIERS = {

}

[node name="SprShip" parent="GameLayer/Megaship" index="1"]
material = SubResource( 3 )

[node name="StateMachine" parent="GameLayer/Megaship" index="2"]
initial_state = NodePath("Move/Teleport")
initial_msg = {
"final_position": Vector2( 0, 0 ),
"init_position": Vector2( 0, -300 )
}

[node name="Knockback" parent="GameLayer/Megaship/StateMachine/Move" index="1"]
knockback_speed = 80.0

[node name="Cannons" parent="GameLayer/Megaship" index="3"]
_ammo_bar_path = NodePath("../../../GUILayer/Container/BarContainer/MegashipAmmoBar")

[node name="EnemyGenerator" type="Node2D" parent="GameLayer"]
script = ExtResource( 9 )
enemies = [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ]
warning_masks = ExtResource( 14 )
warning_palettes = ExtResource( 15 )

[node name="Camera" type="Camera2D" parent="GameLayer"]
pause_mode = 2
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true
script = ExtResource( 8 )
_path_to_follow = NodePath("../Megaship")

[node name="SpaceBackground" parent="." instance=ExtResource( 16 )]
to_follow = NodePath("../GameLayer/Camera")

[node name="MusicLooper" parent="." instance=ExtResource( 17 )]

[node name="GameOverTimer" type="Timer" parent="."]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]

[editable path="GameLayer/Megaship"]
